Opened 19 years ago

Closed 15 years ago

#698 closed bug (fixed)

[Tracker] could crash if many files opened at once

Reported by: diver Owned by: mmlr
Priority: normal Milestone: R1
Component: Applications/Tracker Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by anevilyak)

If you for example go to /boot/beos/etc/Keymap, select all files and press enter rapidly several times (10-20) Tracker will crash. Before crash you could see several tracker windows with "There was an error resolving a link" message, but folder itself doesn't contain any links at all. Backtrace will follow.

Attachments (1)

tracker_crash_3.PNG (35.4 KB ) - added by diver 19 years ago.
back trace

Download all attachments as: .zip

Change History (10)

by diver, 19 years ago

Attachment: tracker_crash_3.PNG added

back trace

comment:1 by diver, 18 years ago

Platform: All

This bug is still here in hrev21703.

comment:2 by diver, 18 years ago

It could also freeze app_server paste from serial port:

vm_page_fault: sending team "/boot/beos/system/Tracker" 0x3d SIGSEGV, ip 0x6dc504 ("libroot.so_seg0ro" +0x6f504) stack trace:

0x002d7b06 (libbe.so_seg0ro + 0xd5b06) 0x002d74ca (libbe.so_seg0ro + 0xd54ca) 0x002d5730 (libbe.so_seg0ro + 0xd3730) 0x00551e9b (libtracker.so_seg0ro + 0xcce9b) 0x00554d9a (libtracker.so_seg0ro + 0xcfd9a) 0x005e5bbb (libtracker.so_seg0ro + 0x160bbb) 0x005e5a00 (libtracker.so_seg0ro + 0x160a00) 0x0068d74c (libroot.so_seg0ro + 0x2074c) 0x7b140fec (LaunchTask_7e4_stack + 0x3ffec)

vm_soft_fault: va 0x0 not covered by area in address space vm_page_fault: vm_soft_fault returned error 'Bad address' on fault at 0x0, ip 0x80089564, write 0, user 0, thread 0x7e4 debug_server: Thread 1518 entered the debugger: After syscall stack trace, current PC 0xffff0102 :

(0x70c6f82c) 0x2caccb _SendMessageC8BMessagelllxbR10BMessenger + 0x233 (0x70c6f8bc) 0x2cae91 _SendMessageC8BMessagelllP8BMessagexx + 0x139 (0x70c6f93c) 0x2d13a5 SendMessageC10BMessengerP8BMessageT1xx + 0x61 (0x70c6f99c) 0x2d6d22 _IsAppRegisteredC7BRosterPC9entry_reflUlPbP8app_info + 0xfa (0x70c6fa7c) 0x2d7609 _LaunchAppC7BRosterPCcPC9entry_refPC5BListiPCPCcPl + 0x1f9 (0x70c6fd8c) 0x2d5730 LaunchC7BRosterPC9entry_refPC8BMessagePl + 0x68 (0x70c6fdec) 0x551e9b GetAttrInfo8BPrivatePC5BNodePCcT2PUlPUl + 0xbab (closest symbol) (0x70c6ff1c) 0x554d9a clQ28BPrivatet24ThreeParamFunctionObject3ZPC9entry_refZPC8BMessageZb + 0x2e (0x70c6ff4c) 0x5e5bbb RunQ28BPrivate6Thread + 0x2b (0x70c6ff7c) 0x5e5a00 RunBinderQ28BPrivate12SimpleThreadPv + 0x28 (0x70c6ffac) 0x68d74c _get_next_team_info + 0x5c (closest symbol)

comment:3 by diver, 17 years ago

Component: - Applications- Applications/Tracker

This bug is still with us in hrev22867.

comment:4 by diver, 16 years ago

Still here in hrev28457, but GDB now chokes and will not give back trace.

comment:5 by diver, 15 years ago

Version: R1 development

Still here in hrev32617

comment:6 by anevilyak, 15 years ago

Description: modified (diff)
Owner: changed from axeld to anevilyak
Status: newassigned

comment:7 by anevilyak, 15 years ago

A minor work-in-progress note: the problems in this ticket seem to stem from Tracker running out of file descriptors while executing all those launch requests in parallel threads, and not gracefully handling those error conditions. Properly fixing this is not going to be trivial though.

comment:8 by anevilyak, 15 years ago

Owner: changed from anevilyak to mmlr
Status: in-progressassigned
Version: R1/pre-alpha1R1/Development

comment:9 by mmlr, 15 years ago

Resolution: fixed
Status: assignedclosed

Should be fixed in hrev35351.

Note: See TracTickets for help on using tickets.